# latest-maven-version

./: .gitignore  Cargo.toml  Makefile  Makefile.toml  README.md
.github/workflows/: checks.yml  release.yml  releases.yml
src/: main.rs  metadata.rs  mvnmeta.rs  opts.rs  reqwest_resolver.rs  resolvers.rs  ureq_resolver.rs  version_parser.rs  versions.rs
