[package]
name = "latest-maven-version"
version = "0.9.0"
description = "Check maven central for the latest version of some artifact"
authors = ["Paul Horn <paul.horn@neotechnology.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
clap = "3.0.0-beta.4"
color-eyre = { version = "0.5.11", default-features = false }
console = { version = "0.14.1", default-features = false }
itertools = "0.10.1"
lenient_semver = "0.4.2"
reqwest = { version = "0.11.4", default-features = false, features = [ "gzip", "rustls-tls" ] }
rpassword = "5.0.1"
semver = "1.0.5"
tokio = { version = "1.12.0", features = ["full"] }
url = "2.2.2"
xmlparser = "0.13.3"

[dev-dependencies]
test-case = "1.2.0"

[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 2
rpath = false
