[package]
name = "latest-maven-version"
version = "0.9.0"
description = "Check maven central for the latest version of some artifact"
authors = ["Paul Horn <paul.horn@neotechnology.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.58"
clap = { version = "4.0.17", features = ["derive"] }
color-eyre = { version = "0.6.2", default-features = false }
console = { version = "0.15.2", default-features = false }
itertools = "0.10.5"
lenient_semver = "0.4.2"
reqwest = { version = "0.11.12", default-features = false, features = [
    "gzip",
    "rustls-tls",
] }
rpassword = "7.0.0"
semver = "1.0.14"
tokio = { version = "1.21.2", features = ["full"] }
url = "2.3.1"
xmlparser = "0.13.5"

[dev-dependencies]
test-case = "2.2.2"

[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 2
rpath = false
